Remove Sophus dependency (added headers)

--- a/sv/dsol/CMakeLists.txt
+++ b/sv/dsol/CMakeLists.txt
@@ -70,7 +70,7 @@ cc_bench(
 cc_library(
   NAME dsol_frame
   SRCS "frame.cpp"
-  DEPS sv_dsol_image sv_dsol_point sv_dsol_camera Sophus::Sophus absl::span
+  DEPS sv_dsol_image sv_dsol_point sv_dsol_camera sv_sophus absl::span
   LINKOPTS sv_util_tbb)
 cc_test(
   NAME dsol_frame_test
