--- a/sv/util/CMakeLists.txt
+++ b/sv/util/CMakeLists.txt
@@ -87,7 +87,7 @@ cc_test(
 cc_library(
   NAME util_dataset
   SRCS "dataset.cpp"
-  DEPS sv_util_ocv Eigen3::Eigen Sophus::Sophus absl::flat_hash_map
+  DEPS sv_util_ocv Eigen3::Eigen sv_sophus absl::flat_hash_map
   DEFINES XTENSOR_FOUND=${xtensor_FOUND})
 if(xtensor_FOUND)
   target_link_libraries(sv_util_dataset PUBLIC xtensor)
